--- a/package.xml
+++ b/package.xml
@@ -12,12 +12,14 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>move_base_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  
 
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
-  
+  <run_depend>move_base_msgs</run_depend>
   <!--run_depend>rgbd_launch</run_depend>
   <run_depend>depth_image_proc</run_depend>
   <run_depend>image_proc</run_depend>
